GeneUtils: PanelBuilder: improve probe overlap handling